--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Section: devel
 Priority: optional
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9), bmake, graphicsmagick
+Homepage: https://github.com/michipili/bsdowl
 
 Package: bsdowl
 Architecture: all
