Isolate variables set by the configuration script
This is useful to developpers as it reduces the number of ./configure runs
required when working on the sources.

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -15,6 +15,7 @@
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 FILES+=	bps.init.mk
+FILES+= bps.bpsconfig.mk
 FILES+= bps.credentials.mk
 FILES+= bps.objdir.mk
 FILES+=	bps.own.mk
