--- a/configure.ac
+++ b/configure.ac
@@ -55,4 +55,4 @@ AC_SUBST([COMPRESS])
 AC_SUBST([SYSTEMOWN])
 AC_SUBST([SYSTEMGRP])
 AC_OUTPUT(Makefile.inc)
-AC_OUTPUT(bps/bps.init.mk)
+AC_OUTPUT(bps/bps.bpsconfig.mk)
