--- a/bps/Makefile
+++ b/bps/Makefile
@@ -15,7 +15,10 @@
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 FILES+=	bps.init.mk
-FILES+= bps.bpsconfig.mk
+FILES+=	bps.bpsconfig.mk
+FILES+= bps.package.mk
+FILES+= bps.architecture.mk
+FILES+= bps.configuration.mk
 FILES+= bps.credentials.mk
 FILES+= bps.objdir.mk
 FILES+=	bps.own.mk
