Add a test building a simple OCaml program with profiling information
Closes #74

--- a/testsuite/ocaml/test_program/Makefile
+++ b/testsuite/ocaml/test_program/Makefile
@@ -17,6 +17,7 @@
 TEST=	TestProgram
 TEST+=	TestProgramNative
 TEST+=	TestProgramDebug
+TEST+=	TestProgramProfile
 TEST+=	TestProgramMultiple
 
 # The test TestProgramNoObjDir must be at the end of the list, because
