Prepare a test for a simple C program

--- a/langc/Makefile
+++ b/langc/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test Suite
+### Makefile -- Developement of applications with C
 
 # Author: Michael Grünewald
-# Date: Fri Oct 17 13:50:39 CEST 2014
+# Date: Fri Nov  7 08:53:47 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,10 +14,15 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
+FILES=			langc.init.mk
+FILES+=			langc.build.mk
+FILES+=			langc.uses.mk
+FILES+=			langc.module.mk
+FILES+=			langc.external.mk
+FILES+=			langc.depend.mk
+FILES+=			langc.prog.mk
+FILES+=			langc.lib.mk
 
-SUBDIR=		ocaml
-SUBDIR+=	langc
-
-.include "subdir.mk"
+.include "project.mk"
 
 ### End of file `Makefile'
