--- a/testsuite/langc/Makefile
+++ b/testsuite/langc/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test Suite
+### Makefile -- Test Suite for C language modules
 
 # Author: Michael Grünewald
-# Date: Fri Oct 17 13:50:39 CEST 2014
+# Date: Fri Nov  7 10:14:14 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -15,8 +15,7 @@
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 
-SUBDIR=		ocaml
-SUBDIR+=	langc
+SUBDIR=		test_program
 
 .include "subdir.mk"
 
