Add support for product
Each module saves its list of products in a global ${PRODUCTFILE}. This
happens at the thime where dependencies are calculated.  Later invocations
of make read the ${PRODUCTFILE} which allows, for instance, the current
module to know about libraries prepared by other modules.

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -20,6 +20,7 @@ FILES+= bps.package.mk
 FILES+= bps.uses.mk
 FILES+= bps.module.mk
 FILES+= bps.external.mk
+FILES+=	bps.product.mk
 FILES+= bps.architecture.mk
 FILES+= bps.configuration.mk
 FILES+= bps.credentials.mk
