Build a simple static library
Closes #124

--- a/testsuite/langc/test_library/Makefile
+++ b/testsuite/langc/test_library/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test Suite for C language modules
+### Makefile -- Test features of module langc.lib
 
 # Author: Michael Grünewald
-# Date: Fri Nov  7 10:14:14 CET 2014
+# Date: Fri Nov  7 21:51:23 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,10 +14,8 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
+TEST=	TestLibrary
 
-SUBDIR=		test_program
-SUBDIR+=	test_library
-
-.include "subdir.mk"
+.include "test.mk"
 
 ### End of file `Makefile'
