Write a moderately complex C project

--- a/testsuite/langc/test_complex/goldenratio/Makefile
+++ b/testsuite/langc/test_complex/goldenratio/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test Suite for C language modules
+### Makefile -- A very simple program
 
 # Author: Michael Grünewald
-# Date: Fri Nov  7 10:14:14 CET 2014
+# Date: Sat Nov 15 16:10:58 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,11 +14,13 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
+PROGRAM=		goldenratio
 
-SUBDIR=		test_program
-SUBDIR+=	test_library
-SUBDIR+=	test_complex
+SRCS=			goldenratio.c
 
-.include "subdir.mk"
+DIRS=			${TESTSRCDIR}/librational
+DIRS+=			${TESTSRCDIR}/libfibonacci
+
+.include "langc.prog.mk"
 
 ### End of file `Makefile'
