--- a/testsuite/langc/test_complex/libfibonacci/Makefile
+++ b/testsuite/langc/test_complex/libfibonacci/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test Suite for C language modules
+### Makefile -- Library for computing Fibonacci numbers
 
 # Author: Michael Grünewald
-# Date: Fri Nov  7 10:14:14 CET 2014
+# Date: Fri Nov 14 22:55:51 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,11 +14,15 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
+LIBRARY=		fibonacci
 
-SUBDIR=		test_program
-SUBDIR+=	test_library
-SUBDIR+=	test_complex
+SRCS=			fibonacci.h
+SRCS+=			fibonacci.c
 
-.include "subdir.mk"
+#MAN=			libfibonacci.3
+
+DIRS=			${TESTSRCDIR}/libfibonacci
+
+.include "langc.lib.mk"
 
 ### End of file `Makefile'
