--- a/support/Makefile
+++ b/support/Makefile
@@ -1,11 +1,22 @@
 ### Makefile -- Support scripts for BSD Owl Scripts
 
 # Author: Michael Grünewald
-# Date: Ven  9 mai 2008 14:47:47 CEST
+# Date: Ven Mai  9 2008 14:47:47 CEST
 
-SCRIPT+= mp2eps.sh
-SCRIPT+= mp2png.sh
-SCRIPT+= mp2pdf.sh
+# BSD Owl Scripts (https://github.com/michipili/bsdowl)
+# This file is part of BSD Owl Scripts
+#
+# Copyright © 2005–2014 Michael Grünewald
+#
+# This file must be used under the terms of the CeCILL-B.
+# This source file is licensed as described in the file COPYING, which
+# you should have received as part of this distribution. The terms
+# are also available at
+# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
+
+PROGRAM=		mp2eps.sh
+PROGRAM+=		mp2png.sh
+PROGRAM+=		mp2pdf.sh
 
 .include "script.mk"
 
