--- a/testsuite/script/test_shell/Makefile
+++ b/testsuite/script/test_shell/Makefile
@@ -1,7 +1,7 @@
-### project.mk
+### Makefile -- Test shell scripts and libraries
 
 # Author: Michael Grünewald
-# Date: Jeu 13 mar 2008 21:58:28 CET
+# Date: Fri Nov 21 15:29:59 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,16 +14,8 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-PACKAGE=		bsdowl
-PACKAGEDIR=		/${PACKAGE}
-SCRIPTDIR?=		${_BPS_LIBEXEC}${PACKAGEDIR}
-SHAREDIR?=		${_BPS_DATADIR}${PACKAGEDIR}
-FILESDIR?=		${SHAREDIR}
+TEST=			TestProgram
 
-.include "../../bps/bps.init.mk"
-.include "../../texmf/tex.files.mk"
-.include "../../bps/bps.files.mk"
-.include "../../bps/bps.clean.mk"
-.include "../../bps/bps.usertarget.mk"
+.include "test.mk"
 
-### End of file `project.mk'
+### End of file `Makefile'
