Add simple support for m4-generated files

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -33,6 +33,7 @@ FILES+=	bps.subdir.mk
 FILES+=	bps.files.mk
 FILES+= bps.autoconf.mk
 FILES+= bps.project.mk
+FILES+= bps.m4.mk
 
 .include "project.mk"
 
