--- a/texmf/Makefile
+++ b/texmf/Makefile
@@ -26,7 +26,7 @@ FILES+=			texmf.draft.mk
 
 FILES+=			tex.doc.mk
 FILES+=			latex.doc.mk
-FILES+=			metapost.doc.mk
+FILES+=			mpost.doc.mk
 
 OBSOLETE+=		tex.files.mk
 OBSOLETE+=		tex.files.main.mk
