Rename testsuite for bibtex to a more general name

--- a/testsuite/texmf/Makefile
+++ b/testsuite/texmf/Makefile
@@ -19,7 +19,7 @@ SUBDIR+=		test_latex
 SUBDIR+=		test_graphicx
 SUBDIR+=		test_metapost
 SUBDIR+=		test_complex
-SUBDIR+=		test_bibtex
+SUBDIR+=		test_extra
 
 .include "subdir.mk"
 
