--- a/testsuite/texmf/test_noweb/Makefile
+++ b/testsuite/texmf/test_noweb/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test support for TeX and METAFONT
+### Makefile -- Test noweb support
 
 # Author: Michael Grünewald
-# Date: Sun Nov 23 16:08:05 CET 2014
+# Date: Fri Nov 28 10:04:55 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,14 +14,8 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-SUBDIR=			test_tex
-SUBDIR+=		test_latex
-SUBDIR+=		test_graphicx
-SUBDIR+=		test_metapost
-SUBDIR+=		test_complex
-SUBDIR+=		test_extra
-SUBDIR+=		test_noweb
+TEST=			TestNoweb
 
-.include "subdir.mk"
+.include "test.mk"
 
 ### End of file `Makefile'
