--- a/testsuite/ocaml/test_program/Makefile
+++ b/testsuite/ocaml/test_program/Makefile
@@ -19,6 +19,7 @@ TEST+=	TestProgramNative
 TEST+=	TestProgramDebug
 TEST+=	TestProgramProfile
 TEST+=	TestProgramMultiple
+TEST+=	TestProgramLexerParser
 
 # The test TestProgramNoObjDir must be at the end of the list, because
 # it builds its objects in ${.CURDIR} and these objects would be found
