Prepare test case for complex projects

--- a/testsuite/ocaml/test_complex/manual/Makefile
+++ b/testsuite/ocaml/test_complex/manual/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Newton's method
+### Makefile -- Preparation of the golden_ratio manual
 
 # Author: Michael Grünewald
-# Date: Thu Oct  3 23:39:20 CEST 2013
+# Date: Tue Oct 15 21:37:11 CEST 2013
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,12 +14,8 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-LIBRARY=	newton
-SRCS+=		newton.ml
+ODOC_TITLE=		Golden Ratio
 
-USE_ODOC=	yes
-ODOC_FORMAT=	odoc
-
-.include "ocaml.lib.mk"
+.include "ocaml.manual.mk"
 
 ### End of file `Makefile'
