--- a/testsuite/ocaml/test_complex/fibonacci/Makefile
+++ b/testsuite/ocaml/test_complex/fibonacci/Makefile
@@ -1,7 +1,7 @@
-### Makefile -- Test Suite for OCaml
+### Makefile -- Fibonacci numbers
 
 # Author: Michael Grünewald
-# Date: Fri Oct 17 13:50:39 CEST 2014
+# Date: Sat Oct  5 20:40:24 CEST 2013
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,11 +14,11 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
+LIBRARY=		fibonacci
+SRCS+=			fibonacci.ml
 
-SUBDIR=		test_program
-SUBDIR+=	test_library
-SUBDIR+=	test_complex
+.PATH:			${TESTSRCDIR}/ocaml/fibonacci
 
-.include "subdir.mk"
+.include "ocaml.lib.mk"
 
 ### End of file `Makefile'
