Build a complex OCaml package with multiple configurations
Closes #91

--- a/testsuite/ocaml/test_complex/Makefile
+++ b/testsuite/ocaml/test_complex/Makefile
@@ -15,6 +15,7 @@
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 TEST=			TestComplex
+TEST+=			TestComplexMultiple
 
 .include "test.mk"
 
