--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,14 @@ AC_PROG_ID()
 SYSTEMOWN=root
 SYSTEMGRP=$($ID -gn $SYSTEMOWN)
 
+#
+# Feature control for package managers
+#
+
+# Our package can be installed and used even without the following
+# programs, nevertheless, it might be useful for packagers and porters
+# to let the configure script fail if some programs are not present.
+
 AC_ARG_ENABLE([gpg],
 [  --enable-gpg            enable signing of distribution files with GPG],
 [AC_NEED_PROG([GPG], [gpg])])
@@ -21,6 +29,15 @@ AC_ARG_ENABLE([gm],
 [  --enable-gm             enable conversion of METAPOST pictures to raster
                           formats with GraphicsMagick],
 [AC_NEED_PROG([GraphicsMagick], [gm])])
+
+AC_ARG_ENABLE([ocaml],
+[  --enable-ocaml          enable preparation of OCaml projects],
+[AC_NEED_PROG([ocamlc], [ocamlc])])
+
+AC_ARG_ENABLE([findlib],
+[  --enable-findlib        enable use of OCaml findlib],
+[AC_NEED_PROG([ocamlfind], [ocamlfind])])
+
 
 #
 # Determine compression tools
