--- a/configure.ac
+++ b/configure.ac
@@ -22,34 +22,34 @@ AC_TAR_COMPRESSION_METHODS([COMPRESS])
 # programs, nevertheless, it might be useful for packagers and porters
 # to let the configure script fail if some programs are not present.
 
-AC_ARG_ENABLE([gpg],
-  [AS_HELP_STRING([--enable-gpg],
-    [enable signing of distribution files with GPG])],
+AC_ARG_WITH([gpg],
+  [AS_HELP_STRING([--with-gpg],
+    [support signing of distribution files with GPG])],
   [AC_NEED_PROG([GPG], [gpg])])
 
-AC_ARG_ENABLE([gm],
-  [AS_HELP_STRING([--enable-gm],
-    [enable conversion of METAPOST pictures to raster formats with GraphicsMagick])],
+AC_ARG_WITH([gm],
+  [AS_HELP_STRING([--with-gm],
+    [support conversion of METAPOST pictures to PNG with GraphicsMagick])],
   [AC_NEED_PROG([GraphicsMagick], [gm])])
 
-AC_ARG_ENABLE([ocaml],
-  [AS_HELP_STRING([--enable-ocaml],
-    [enable preparation of OCaml projects])],
+AC_ARG_WITH([ocaml],
+  [AS_HELP_STRING([--with-ocaml],
+    [support preparation of OCaml projects])],
   [AC_NEED_PROG([ocamlc], [ocamlc])])
 
-AC_ARG_ENABLE([findlib],
-  [AS_HELP_STRING([--enable-findlib],
-    [enable use of OCaml findlib])],
+AC_ARG_WITH([findlib],
+  [AS_HELP_STRING([--with-findlib],
+    [support use of OCaml findlib in OCaml projects])],
   [AC_NEED_PROG([ocamlfind], [ocamlfind])])
 
-AC_ARG_ENABLE([tidy],
-  [AS_HELP_STRING([--enable-tidy],
-    [enable use of tidy to canonise HTML pages])],
+AC_ARG_WITH([tidy],
+  [AS_HELP_STRING([--with-tidy],
+    [support use of tidy to canonise HTML pages])],
   [AC_NEED_PROG([tidy], [tidy])])
 
-AC_ARG_ENABLE([opensp],
-  [AS_HELP_STRING([--enable-opensp],
-    [enable static HTML pages generation with OpenSP])],
+AC_ARG_WITH([opensp],
+  [AS_HELP_STRING([--with-opensp],
+    [support static HTML pages generation with OpenSP])],
   [AC_NEED_PROG([OpenSP], [onsgmls])])
 
 AC_CONFIG_FILES([Makefile.inc bps/bps.bpsconfig.mk])
