--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -15,7 +15,7 @@
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 PROJECT=		bsdowl
-AUTHOR=			Michael Grünewald
+OFFICER=		michipili@gmail.com
 VERSION=		@version@
 
 prefix?=		@prefix@
